Getting a basic framework for JSON integration
I included some sample code that's going to have to be ripped out or
changed.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 This is my side project.  I hope it's awesome.
+
+Some things to know about this project.
+
+UTF-8 is being used everywhere as much as possible like this article suggests: http://www.utf8everywhere.org/
